kustomize/environments/overlays/gloo-edge/virtualservice/petstore/single/prefixmatch/petstore-vs-prefix.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'petstore.solo.io'
    routes:
    - matchers:
      - prefix: /foo
      options:
        prefixRewrite: /api/pets
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
